--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>New Branch Title</title>
+	<title>New Branch Devwork</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -14,11 +14,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Basic Data in Branch
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2017</p>
+		<p>&copy; Company 2021</p>
 	</footer>
 </body>
 </html>
