Changes to simple in Master Branch

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>New Branch Title</title>
+	<title>New Branch Master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -14,11 +14,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Trying to Conflict
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2017</p>
+		<p>&copy; Company 2024</p>
 	</footer>
 </body>
 </html>
